docs(api): patient, doctor, hospital
