# doc/api.yml
@@ -1,10 +1,10 @@
 openapi: 3.0.3
 info:
-  version: 'latest'
-  title: Green Route API
-  description: This API provides access to the Green Route service.
+  version: "latest"
+  title: M-Advise
+  description: This API provides access to the M-Advise service.
 servers:
-  - url: 'http://localhost:8080'
+  - url: "http://localhost:8080"
 
 paths:
   /ping:
@@ -13,7 +13,7 @@ paths:
         - Health
       summary: Health check
       operationId: ping
-      security: [ ]
+      security: []
       description: Check server health
       responses:
         200:
@@ -24,7 +24,7 @@ paths:
                 type: string
                 example: pong
         500:
-          $ref: '#/components/responses/500'
+          $ref: "#/components/responses/500"
 
   /signin:
     post:
@@ -32,7 +32,7 @@ paths:
         - Security
       summary: Login user.
       operationId: signIn
-      security: [ ]
+      security: []
       responses:
         "201":
           description: Logged in payload.
@@ -57,7 +57,7 @@ paths:
         - Security
       summary: Sign up user
       operationId: signUp
-      security: [ ]
+      security: []
       requestBody:
         description: Sign up payload.
         required: true
@@ -83,13 +83,13 @@ paths:
         "500":
           $ref: "#/components/responses/500"
 
-  /users/{id}:
+  /doctors/{id}:
     get:
       tags:
         - User
-      summary: Get user by identifier
-      operationId: getUserById
-      security: [ ]
+      summary: Get doctors by identifier
+      operationId: getDoctorById
+      security: []
       parameters:
         - name: id
           in: path
@@ -98,11 +98,11 @@ paths:
             type: string
       responses:
         "200":
-          description: Authenticated User
+          description: Required doctor
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/Doctor"
         "400":
           $ref: "#/components/responses/400"
         "403":
@@ -113,14 +113,68 @@ paths:
           $ref: "#/components/responses/429"
         "500":
           $ref: "#/components/responses/500"
+  /doctors/{id}/patients:
+    get:
+      tags:
+        - User
+      summary: Get patients of a specific doctor
+      operationId: getPatientsByDoctorId
+      security: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: List of patients
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Patient"
+        "500":
+          $ref: "#/components/responses/500"
 
+  /patients/{id}:
+    get:
+      tags:
+        - User
+      summary: Get patient by identifier
+      operationId: getPatientById
+      security: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Required patient
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Doctor"
+        "400":
+          $ref: "#/components/responses/400"
+        "403":
+          $ref: "#/components/responses/403"
+        "404":
+          $ref: "#/components/responses/404"
+        "429":
+          $ref: "#/components/responses/429"
+        "500":
+          $ref: "#/components/responses/500"
   /users/{id}/raw:
     post:
       tags:
         - User
       summary: Update user photo
       operationId: updateProfilePic
-      security: [ ]
+      security: []
       parameters:
         - name: id
           in: path
@@ -142,14 +196,83 @@ paths:
                 type: string
                 example: photo.png
         500:
-          $ref: '#/components/responses/500'
+          $ref: "#/components/responses/500"
+
+  /hospitals:
+    get:
+      tags:
+        - Department
+      summary: Get list of hospitals
+      operationId: getHospitals
+      security: []
+      responses:
+        200:
+          description: List of hospital
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Hospital"
+        500:
+          $ref: "#/components/responses/500"
+    post:
+      tags:
+        - Department
+      summary: Crupdate hospital
+      operationId: crupdateHospital
+      security: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: "#/components/schemas/Hospital"
+      responses:
+        200:
+          description: File key
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Hospital"
+        500:
+          $ref: "#/components/responses/500"
+
+  /hospitals/{id}/doctors:
+    get:
+      tags:
+        - Department
+      summary: Get list of doctors of a specific hospital
+      operationId: getDoctorsByHospitalsId
+      parameters:
+        - name: id
+          schema:
+            type: string
+          in: path
+          required: true
+          description: hospital identifier
+      security: []
+      responses:
+        "200":
+          description: List of doctors
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Doctor"
+        "500":
+          $ref: "#/components/responses/500"
   /raw/{fileId}:
     post:
       tags:
         - File
       summary: Upload standard file
       operationId: uploadFile
-      security: [ ]
+      security: []
       parameters:
         - name: fileId
           in: path
@@ -171,13 +294,13 @@ paths:
                 type: string
                 example: photo.png
         500:
-          $ref: '#/components/responses/500'
+          $ref: "#/components/responses/500"
     get:
       tags:
         - File
       summary: Retrieve file
       operationId: downloadFile
-      security: [ ]
+      security: []
       parameters:
         - name: fileId
           in: path
@@ -193,78 +316,7 @@ paths:
                 type: string
                 format: binary
         500:
-          $ref: '#/components/responses/500'
-  /activities:
-    get:
-      tags:
-        - User
-      summary: Get user activities history
-      operationId: getActivities
-      security: [ ]
-      responses:
-        200:
-          description: List of itineraries prompted
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Itinerary"
-        '500':
-          $ref: '#/components/responses/500'
-
-  /itineraries:
-    post:
-      tags:
-        - Route
-      summary: Eco-friendly itineraries according to travel description
-      operationId: generateItineraries
-      security: [ ]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/TravelDescription"
-      responses:
-        200:
-          description: Eco friendly route with description with carbone analysis
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Itinerary"
-        '500':
-          $ref: '#/components/responses/500'
-
-  /weathers:
-    post:
-      tags:
-        - Route
-      summary: Get next 3 days forecast
-      operationId: getForecast
-      security: [ ]
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                origin:
-                  type: string
-                  example: Paris
-                destination:
-                  type: string
-                  example: Marseille
-      responses:
-        200:
-          description: Eco friendly route with description with carbone analysis
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Weather"
-        '500':
-          $ref: '#/components/responses/500'
-
+          $ref: "#/components/responses/500"
 
 components:
   responses:
@@ -273,31 +325,31 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/BadRequestException'
+            $ref: "#/components/schemas/BadRequestException"
     403:
       description: Forbidden
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/NotAuthorizedException'
+            $ref: "#/components/schemas/NotAuthorizedException"
     404:
       description: Not found
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ResourceNotFoundException'
+            $ref: "#/components/schemas/ResourceNotFoundException"
     429:
       description: Too many requests to the API
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/TooManyRequestsException'
+            $ref: "#/components/schemas/TooManyRequestsException"
     500:
       description: Internal server error
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/InternalServerException'
+            $ref: "#/components/schemas/InternalServerException"
   schemas:
     User:
       type: object
@@ -310,7 +362,7 @@ components:
           type: string
         first_name:
           type: string
-        username:
+        nic:
           type: string
         birth_date:
           type: string
@@ -319,6 +371,43 @@ components:
           type: string
         photo_id:
           type: string
+        role:
+          type: string
+          enum:
+            - ADVISOR
+            - DOCTOR
+            - PATIENT
+    Doctor:
+      allOf:
+        - $ref: "#/components/schemas/User"
+      type: object
+      properties:
+        hospital_id:
+          type: string
+        registry_number:
+          type: string
+    Patient:
+      allOf:
+        - $ref: "#/components/schemas/User"
+      type: object
+    Hospital:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        nif:
+          type: string
+        stat:
+          type: string
+        contact:
+          type: string
+        advisor:
+          type: object
+          properties:
+            schemas:
+              $ref: "#/components/schemas/User"
 
     AuthenticationPayload:
       type: object
@@ -327,148 +416,6 @@ components:
           type: string
         provider_id:
           type: string
-
-    Itinerary:
-      type: object
-      properties:
-        title:
-          type: string
-        transport:
-          type: object
-          properties:
-            co2e:
-              type: number
-              description: Carbone footprint
-            co2e_pp:
-              type: number
-              description: Carbone footprint per person
-        accommodation:
-          type: object
-          properties:
-            co2e:
-              type: number
-              description: Carbone footprint
-            co2e_pp:
-              type: number
-              description: Carbone footprint per person
-        travel_description:
-          type: string
-
-    Weather:
-      type: object
-      properties:
-        origin:
-          $ref: "#/components/schemas/Forecast"
-        destination:
-          $ref: "#/components/schemas/Forecast"
-    Forecast:
-      type: object
-      properties:
-        location:
-          type: object
-          properties:
-            name:
-              type: string
-            region:
-              type: string
-            country:
-              type: string
-        forecast:
-          type: array
-          items:
-            $ref: "#/components/schemas/ForecastDay"
-
-    ForecastDay:
-      type: object
-      properties:
-        date:
-          type: string
-        day:
-          type: object
-          properties:
-            max_temp:
-              type: number
-              description: Temperature in Celsius multiply by 100
-            min_temp:
-              type: number
-              description: Temperature in Celsius multiply by 100
-            condition:
-              type: object
-              properties:
-                text:
-                  type: string
-                  example: Patchy rain nearby
-                icon:
-                  type: string
-                  description: icon link
-
-
-
-    TravelDescription:
-      type: object
-      properties:
-        from:
-          type: string
-          example: Wall Street 96, New York City
-        to:
-          type: string
-          example: White House, Washington DC
-        distance:
-          type: integer
-        people:
-          type: integer
-          description: How many persons are going to travel?
-        accommodation_type:
-          type: string
-          enum:
-            - HOTEL
-            - HOSTEL
-            - TENT
-            - APARTMENT
-            - ROOM
-            - RENTED_APARTMENT
-        nights:
-          type: integer
-          description: 'Number of nights, defaults to 1.'
-        vehicle:
-          $ref: "#/components/schemas/Vehicle"
-    Vehicle:
-      type: object
-      properties:
-        type:
-          type: string
-          enum:
-            - BICYCLE
-            - SMALL_CAR
-            - LARGE_CAR
-            - BUS
-            - MINIVAN
-            - MOTOR_HOME
-            - FLIGHT_REGULAR_ECONOMY
-            - FLIGHT_CHARTER_ECONOMY
-            - HIKING
-            - KAYAK
-            - TRAM
-            - SUBWAY
-            - FERRY
-            - TRAIN
-            - WALKING
-        fuel:
-          $ref: "#/components/schemas/Fuel"
-    Fuel:
-      type: object
-      properties:
-        type:
-          type: string
-          enum:
-            - BIO_DIESEL
-            - DIESEL
-            - ETHANOL
-            - GASOLINE
-            - ELECTRICITY
-            - NATURAL_GAS
-            - BIO_BAS
-            - FOSSIL_GAS
 
     Page:
       type: integer
@@ -485,16 +432,16 @@ components:
           type: string
     BadRequestException:
       allOf:
-        - $ref: '#/components/schemas/Exception'
+        - $ref: "#/components/schemas/Exception"
     NotAuthorizedException:
       allOf:
-        - $ref: '#/components/schemas/Exception'
+        - $ref: "#/components/schemas/Exception"
     ResourceNotFoundException:
       allOf:
-        - $ref: '#/components/schemas/Exception'
+        - $ref: "#/components/schemas/Exception"
     TooManyRequestsException:
       allOf:
-        - $ref: '#/components/schemas/Exception'
+        - $ref: "#/components/schemas/Exception"
     InternalServerException:
       allOf:
-        - $ref: '#/components/schemas/Exception'
+        - $ref: "#/components/schemas/Exception"
